--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,3 +18,16 @@ spec:
         imagePullPolicy: IfNotPresent
         ports:
           - containerPort: 9002
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: hello-go
+spec:
+  type: LoadBalancer
+  ports:
+  - name: http
+    port: 80
+    targetPort: 9002
+  selector:
+    name: hello-go
