--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,6 +18,8 @@ spec:
         imagePullPolicy: IfNotPresent
         ports:
           - containerPort: 9002
+      imagePullSecrets:
+      - name: pullsecret
 ---
 apiVersion: v1
 kind: Service
