--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: hello
-        image: 192.168.56.12:5000/hello-jenkins/hello:v1.${BUILD_ID}
+        image: 192.168.56.12:5000/hello-jenkins/hello:v1.#${BUILD_ID}#
         imagePullPolicy: IfNotPresent
         ports:
           - containerPort: 9002
