--- a/ansible/project/tasks/5_install_kubernetes_packages.yml
+++ b/ansible/project/tasks/5_install_kubernetes_packages.yml
@@ -33,13 +33,14 @@
      - name: Apply new settings
        command: sudo sysctl --system
 
-     - name: install containerd
+     - name: Install containerd
        shell: |
                sudo apt-get update && sudo apt-get install -y containerd
                sudo mkdir -p /etc/containerd
                sudo containerd config default | sudo tee /etc/containerd/config.toml
                sudo systemctl restart containerd
-     - name: Change config.toml
+     
+     - name: Change config.toml for insecure registry
        become: yes  
        copy:
          src: config.toml
@@ -50,7 +51,7 @@
                sudo swapoff -a
                sudo sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab
 
-     - name: install and configure dependencies
+     - name: Install and configure dependencies
        shell: |
                sudo apt-get update && sudo apt-get install -y apt-transport-https curl
                curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
@@ -78,11 +79,13 @@
          line: KUBELET_EXTRA_ARGS=--node-ip=192.168.56.10
          create: yes
          mode: 0644
+     
      - name: Restart kubelet
        service:
          name: kubelet
          daemon_reload: yes
          state: restarted
+     
      - name: Restart Containerd
        service: 
          name: containerd
