--- a/ansible/project/tasks/6_kubernetes_master_config.yml
+++ b/ansible/project/tasks/6_kubernetes_master_config.yml
@@ -1,5 +1,5 @@
 ---   
-    - name: initialize the cluster
+    - name: Initialize the cluster
       command: kubeadm init --apiserver-advertise-address=192.168.56.10 --apiserver-cert-extra-sans="192.168.56.10" --pod-network-cidr=172.43.0.0/16
       register: kubernetes_init
       args:
@@ -38,7 +38,7 @@
         replace: '172.43.0.0/16'
         backup: yes
 
-    - name: Apply
+    - name: Apply Calico yaml
       shell: |
         kubectl apply -f /home/vagrant/calico.yaml
       environment:
@@ -56,12 +56,3 @@
     - name: Copy join command to local file.
       become: yes
       local_action: copy content="{{ kubernetes_join_command.stdout_lines[0] }}" dest="/tmp/kubernetes_join_command" mode=0777
-    
-    - name: Wait
-      ansible.builtin.wait_for:
-        timeout: 120
-
-    - name: Ingress controller kuruluyor
-      become: yes
-      become_user: vagrant 
-      shell: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.1/deploy/static/provider/cloud/deploy.yaml
